--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,248 @@
-html{font-family:"Poppins",sans-serif}body{overflow-x:hidden}*{outline-color:#000}.layout{display:flex;flex-direction:column;min-height:100%;min-height:100vh;position:relative}.layout .header,.layout .footer{flex:none}.layout .main{display:flex;flex-direction:column;flex:1 0 auto;outline:0}.layout .main::after{content:"";display:block;height:0px;visibility:hidden}.header{padding:2rem 0}.header__inner{display:flex;justify-content:center;align-items:center}.container{width:90%;margin-left:auto;margin-right:auto;max-width:1200px}.quote{font-family:"Playfair Display",serif;font-size:clamp(2rem, 3vw, 4rem);margin:1rem 3rem 1rem 3rem;text-align:center;position:relative}@media only screen and (min-width: 576px){.quote::before{content:url(/assets/images/quote-upper.svg);position:absolute;z-index:-1;left:0;top:-25px;transform:translate(-75%, -75%);height:100px}}@media only screen and (min-width: 576px)and (max-width: 576px){.quote::before{transform:translate(-65%, -50%) scale(0.5)}}@media only screen and (min-width: 576px){.quote::after{content:url(/assets/images/quote-lower.svg);position:absolute;z-index:-1;right:0;bottom:-25px;transform:translate(75%, 75%);height:100px}}.author{font-size:clamp(1rem, 1.5vw, 1.625rem);text-align:center;margin:1rem 3rem 1rem 3rem;color:#8f8f8f}button{font-size:100%;padding:.5em 1em;color:rgba(0,0,0,.8);border:transparent;background-color:#e6e6e6;text-decoration:none;border-radius:2px}.black-button{background:#111;color:#fff}.button-lg{font-size:125%}.button-icon{width:48px;height:48px;border-radius:24px;margin:.5rem;background-color:#f2f2f2;color:#aaa;transition:color 200ms cubic-bezier(0.4, 0, 0.2, 1)}.button-icon:hover{color:#8c8c8c}.button-icon svg{vertical-align:middle}.d-flex{display:flex}.flex-row{flex-direction:row}.flex-column{flex-direction:column}.justify-content-center{justify-content:center}.align-items-center{align-items:center}.toast{visibility:hidden;min-width:250px;background-color:#000;color:#fff;text-align:center;border-radius:.25rem;padding:1rem;position:fixed;z-index:1;left:50%;bottom:30px;transform:translateX(-50%)}.toast--show{visibility:visible;-webkit-animation:toastfadein .5s,toastfadeout .5s 2.5s;animation:toastfadein .5s,toastfadeout .5s 2.5s;animation-timing-function:cubic-bezier(0.4, 0, 0.2, 1)}@-webkit-keyframes toastfadein{from{bottom:0;opacity:0}to{bottom:30px;opacity:1}}@keyframes toastfadein{from{bottom:0;opacity:0}to{bottom:30px;opacity:1}}@-webkit-keyframes toastfadeout{from{bottom:30px;opacity:1}to{bottom:0;opacity:0}}@keyframes toastfadeout{from{bottom:30px;opacity:1}to{bottom:0;opacity:0}}/*# sourceMappingURL=style.css.map */
+html {
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  overflow-x: hidden;
+}
+
+* {
+  outline-color: black;
+}
+
+.layout {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  min-height: 100vh;
+  position: relative;
+}
+.layout .header,
+.layout .footer {
+  flex: none;
+}
+.layout .main {
+  display: flex;
+  flex-direction: column;
+  flex: 1 0 auto;
+  outline: 0;
+}
+.layout .main::after {
+  content: "";
+  display: block;
+  height: 0px;
+  visibility: hidden;
+}
+
+.header {
+  padding: 2rem 0;
+}
+.header__inner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
+}
+
+.quote {
+  font-family: "Playfair Display", serif;
+  font-size: clamp(2rem, 3vw, 4rem);
+  margin: 1rem 3rem 1rem 3rem;
+  text-align: center;
+  position: relative;
+}
+@media only screen and (min-width: 576px) {
+  .quote::before {
+    content: url(/assets/images/quote-upper.svg);
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    top: -25px;
+    transform: translate(-75%, -75%);
+    height: 100px;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 576px) {
+  .quote::before {
+    transform: translate(-65%, -50%) scale(0.5);
+  }
+}
+@media only screen and (min-width: 576px) {
+  .quote::after {
+    content: url(/assets/images/quote-lower.svg);
+    position: absolute;
+    z-index: -1;
+    right: 0;
+    bottom: -25px;
+    transform: translate(75%, 75%);
+    height: 100px;
+  }
+}
+
+.author {
+  font-size: clamp(1rem, 1.5vw, 1.625rem);
+  text-align: center;
+  margin: 1rem 3rem 1rem 3rem;
+  color: #8f8f8f;
+}
+
+button {
+  font-size: 100%;
+  padding: 0.5em 1em;
+  color: rgba(0, 0, 0, 0.8);
+  border: transparent;
+  background-color: #e6e6e6;
+  text-decoration: none;
+  border-radius: 2px;
+}
+
+.black-button {
+  background: #111111;
+  color: #fff;
+}
+
+.button-lg {
+  font-size: 125%;
+}
+
+.button-icon {
+  width: 48px;
+  height: 48px;
+  border-radius: 24px;
+  margin: 0.5rem;
+  background-color: #f2f2f2;
+  color: #aaaaaa;
+  transition: color 200ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button-icon:hover {
+  color: #8c8c8c;
+}
+.button-icon svg {
+  vertical-align: middle;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+.toast {
+  visibility: hidden;
+  min-width: 250px;
+  background-color: black;
+  color: white;
+  text-align: center;
+  border-radius: 0.25rem;
+  padding: 1rem;
+  position: fixed;
+  z-index: 1;
+  left: 50%;
+  bottom: 30px;
+  transform: translateX(-50%);
+}
+.toast--show {
+  visibility: visible;
+  -webkit-animation: toastfadein 0.5s, toastfadeout 0.5s 2.5s;
+  animation: toastfadein 0.5s, toastfadeout 0.5s 2.5s;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@-webkit-keyframes toastfadein {
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+  to {
+    bottom: 30px;
+    opacity: 1;
+  }
+}
+@keyframes toastfadein {
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+  to {
+    bottom: 30px;
+    opacity: 1;
+  }
+}
+@-webkit-keyframes toastfadeout {
+  from {
+    bottom: 30px;
+    opacity: 1;
+  }
+  to {
+    bottom: 0;
+    opacity: 0;
+  }
+}
+@keyframes toastfadeout {
+  from {
+    bottom: 30px;
+    opacity: 1;
+  }
+  to {
+    bottom: 0;
+    opacity: 0;
+  }
+}
+.ripple-loader {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+  margin: 3rem;
+}
+
+.ripple-loader div {
+  position: absolute;
+  border: 4px solid black;
+  opacity: 1;
+  border-radius: 50%;
+  animation: ripple-loader 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+
+.ripple-loader div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+
+@keyframes ripple-loader {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
